--- a/LoopLabSocial/css/style.css
+++ b/LoopLabSocial/css/style.css
@@ -42,3 +42,10 @@ body {
     border-radius: 5px;
 
 }
+
+#explore-section .fas, #share-section .fas {
+    background: #333;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+}
