--- a/LoopLabSocial/css/style.css
+++ b/LoopLabSocial/css/style.css
@@ -35,7 +35,7 @@ body {
     opacity: 0.8;
 }
 
-#home-section .fas {
+#home-section .fas, #create-section .fas {
     color: #008ed6;
     background: white;
     padding: 5px;
@@ -49,3 +49,5 @@ body {
     padding: 5px;
     border-radius: 5px;
 }
+
+
